# lab_2

./: CMakeLists.txt  README.md
databases/imports/: first_db.csv
src/: MainWindow.cpp  MainWindow.h  TextDatabase.cpp  TextDatabase.h  main.cpp
ui/: MainWindow.ui
